@@ -5,7 +5,8 @@ Changelog
 1.9.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Wrap step.objects in a SavepointIterator that creates a savepoint every n items.
+  [lgraf]
 
 
 1.9.0 (2014-08-27)
